# e-commerce-lakehouse

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  databricks.yml  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
airflow/: Dockerfile  requirements-dbt.txt  requirements.txt
airflow/dags/: ecommerce_pipeline_dag.py
airflow/include/: __init__.py  databricks_client.py
dashboards/: Dockerfile  bootstrap_metabase.py  dashboard_manifest.yml  requirements.txt
databricks/notebooks/: 01_kafka_ingestion.py  02_bronze_layer.py  03_silver_layer.py  04_warehouse_load.py  05_quality_checks.py
databricks/resources/: ecommerce_pipeline.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: cross_database.sql
dbt/snapshots/: customer_snapshot.sql
dbt/tests/: assert_event_timestamps_not_in_future.sql  assert_positive_order_values.sql  assert_refunds_reference_orders.sql
docs/: architecture.md  cloud-migration.md  data-contract.md  runbook.md
generator/: Dockerfile  __init__.py  contracts.py  event_generator.py  events.py
kafka/topics/: create-topics.sh
recruiter-site/: .gitignore  README.md  instrumentation.ts  package-lock.json  package.json
recruiter-site/.openai/: hosting.json
recruiter-site/app/: globals.css  layout.tsx  page.tsx
recruiter-site/lib/: database.ts  demo-config.ts  event-stream.ts
recruiter-site/tests/: cloud-runtime.test.mjs
tests/: test_contracts.py  test_event_factory.py  test_event_sink.py
warehouse/: Dockerfile  __init__.py  event_sink.py
warehouse/init/: 00-create-databases.sh  (+1 more)
(+36 files in other folders)
