[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-lakehouse"
version = "0.1.0"
description = "Real-time e-commerce analytics lakehouse reference implementation"
requires-python = ">=3.11"
dependencies = [
  "kafka-python-ng==2.2.3",
  "psycopg[binary]==3.2.9",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.4",
]

[tool.setuptools.packages.find]
include = ["generator*", "warehouse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

